🔨 Temp fix for home animations using visibility

--- a/styles/components/social.scss
+++ b/styles/components/social.scss
@@ -2,6 +2,7 @@
 
 @import '../mixins';
 .social-icons {
+	visibility: hidden;
 	position: fixed;
 	bottom: 1rem;
 	margin-top: 30px;
